--- a/conf/base/parameters.yml
+++ b/conf/base/parameters.yml
@@ -1,3 +1,15 @@
+target_name: "SalePrice"
+
+remove_out_train: True
+
+remove_out_valid: True
+
+remove_out_test: False
+
+alpha: 0.2
+
+max_evals: 10
+
 params_hgb: {
     "max_iter": 1000,
     "max_depth": 7,
