--- a/conf/base/parameters.yml
+++ b/conf/base/parameters.yml
@@ -8,19 +8,17 @@ remove_out_test: False
 
 alpha: 0.2
 
-max_evals: 10
+max_evals: 15
 
 params_hgb: {
     "max_iter": 1000,
     "max_depth": 7,
-    "feat_cat": ['MSZoning', 'Street', 'Alley', 'LotShape', 'LandContour', 'Utilities',
+    "feat_cat": [
+        'MSSubClass', 'MSZoning', 'Street', 'Alley', 'LotShape', 'LandContour', 'Utilities',
         'LotConfig', 'LandSlope', 'Neighborhood', 'Condition1', 'Condition2',
-        'BldgType', 'HouseStyle', 'RoofStyle', 'RoofMatl', 'Exterior1st',
-        'Exterior2nd', 'MasVnrType', 'ExterQual', 'ExterCond', 'Foundation',
-        'BsmtQual', 'BsmtCond', 'BsmtExposure', 'BsmtFinType1', 'BsmtFinType2',
-        'Heating', 'HeatingQC', 'CentralAir', 'Electrical', 'KitchenQual',
-        'Functional', 'FireplaceQu', 'GarageType', 'GarageFinish', 'GarageQual',
-        'GarageCond', 'PavedDrive', 'PoolQC', 'Fence', 'MiscFeature',
-        'SaleType', 'SaleCondition'
+        'BldgType', 'HouseStyle', 'RoofStyle', 'RoofMatl', 'Exterior1st', 'Exterior2nd',
+        'MasVnrType', 'Foundation',
+        'Heating', 'CentralAir', 'Electrical', 'Functional', 'GarageType', 'GarageFinish',
+        'PavedDrive', 'MiscFeature', 'SaleType', 'SaleCondition',
     ]
 }
